--- a/HW4/src/components/header/header.hbs
+++ b/HW4/src/components/header/header.hbs
@@ -4,7 +4,7 @@
           <li class="nav__item"><a class="nav__link home" href="#">home</a></li>
           <li class="nav__item"><a class="nav__link about" href="#">about</a></li>
           <li class="nav__item"><a class="nav__link archive" href="#">archive</a></li>
-          <li class="nav__item"><a class="nav__link contact" href="#">contact</a></li>
+          <li class="nav__item"><a class="nav__link contact" href="./contacts.html">contact</a></li>
           <li class="nav__item"><a class="blog-post__header-search" href="#"></a></li>
       </ul>
 </header> 
